--- a/ca.mcgill.ecse.flexibook/build.gradle
+++ b/ca.mcgill.ecse.flexibook/build.gradle
@@ -23,7 +23,12 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:29.0-jre'
-    
+
+    implementation files('src/jcalendar-1.4.jar')
+
+    // custom date picker library
+    implementation 'org.jdatepicker:jdatepicker:1.3.4'
+
     // cucumber.io dependencies
     testImplementation "io.cucumber:cucumber-java:6.6.0"
     testImplementation "io.cucumber:cucumber-junit:6.6.0"
